<resources>
  <string name="editor_cancel">取消</string>
  <string name="editor_apply">应用</string>
  <string name="editor_aod">息屏</string>
  <string name="editor_lock">锁屏</string>
  <string name="editor_home">桌面</string>
  <string name="editor_photo">照片</string>
  <string name="editor_change_photo">更换照片</string>
  <string name="editor_follow_lock">跟随锁屏</string>
  <string name="editor_load_sample">载入樱花示例</string>
  <string name="xposed_description">OpenAlive · 当前壁纸的 ColorOS AOD 适配</string>
  <string name="description">本地照片 · 息屏、锁屏与桌面连贯过渡</string>
    <string-array name="xposed_scope"><item>android</item><item>com.android.systemui</item><item>com.oplus.wallpapers</item></string-array>
</resources>
